[package]
name = "rgtpsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "*"
once_cell = "*"
chrono = "*"
clap = { version = "4.0.4", features = ["derive"] }
mimalloc = {version="*", default-features = false}
num = "0.4.0"
num-complex = "0.4.2"
